:sparkles: add project structure and composer
Co-authored-by: Daria Hardering <hardering@sipgate.de>
Co-authored-by: Harun Karacuban <karacuban@sipgate.de>

--- a/.gitignore
+++ b/.gitignore
@@ -255,4 +255,6 @@ tags
 # Ignore all local history of files
 .history
 
-# End of https://www.gitignore.io/api/vim,git,macos,linux,intellij+all,visualstudiocode,node
+# End of https://www.gitignore.io/api/vim,git,macos,linux,intellij+all,visualstudiocode,node/vendor/
+
+vendor/*
