:construction: WIP: add licensing and start implementing oAuth in php
Co-authored-by: Daria Hardering <hardering@sipgate.de>
Co-authored-by: Harun Karacuban <karacuban@sipgate.de>

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
       "email": "io-team@sipgate.de"
     }
   ],
+  "autoload": {
+    "psr-4": {
+      "Sipgate\\Io\\Example\\OAuth\\": "src/"
+    }
+  },
   "require": {
     "vlucas/phpdotenv": "^5.4",
     "steampixel/simple-php-router": "^0.7.1"
