:sparkles: add refreshtoken and accesstoken for oauth
Co-authored-by: Harun Karacuban <karacuban@sipgate.de>
Co-authored-by: Sam Vogelskamp <vogelskamp@sipgate.de>

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ testApiEndpoint = "https://api.sipgate.com/v2/account"
 # Open https://console.sipgate.com/ and create a new client by clicking on "Neuer Client".
 # Enter the client ID and secret in the variables below.
 clientId = 'YOUR_CLIENT_ID'
-clientSecret = 'YOUT_CLIENT_SECRET'
+clientSecret = 'YOUR_CLIENT_SECRET'
 
 # Choose the scopes you want permission for.
 # You can find an overview of available scopes here: https://www.sipgate.io/en/rest-api/oauth2-scopes
